--- a/StsServerIdentity/appsettings.Development.json
+++ b/StsServerIdentity/appsettings.Development.json
@@ -13,9 +13,18 @@
     "ClientUrl": "https://localhost:44311"
   },
   "UseLocalCertStore": "true",
-  "CertificateThumbprint": "TODO_GET_FROM_DEPLOYMENT_SERVER_CERT",
+  "CertificateThumbprint": "A6CB01E1D33F72ED8CA8883C1C7DE02A2C200B85",
   "EmailSettings": {
     "SendGridApiKey": "TODO_EMAIL_API_KEY",
     "SenderEmailAddress": "TODO_EMAIL_ADDRESS"
+  },
+  "fido2": {
+    "serverDomain": "localhost",
+    "serverName": "stsserveridentity20200311041815",
+    "origin": "https://localhost:44318",
+    "timestampDriftTolerance": 300000
+  },
+  "fido2mds": {
+    "MDSAccessKey": null
   }
 }
