--- a/StsServerIdentity/appsettings.json
+++ b/StsServerIdentity/appsettings.json
@@ -8,26 +8,30 @@
       }
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "__DefaultConnection__"
-  },
+  "UseLocalCertStore": "true",
+  "CertificateThumbprint": "A6CB01E1D33F72ED8CA8883C1C7DE02A2C200B85",
+  "AzureKeyVaultEndpoint": "https://damienbod.vault.azure.net",
   "StsConfig": {
-    "StsUrl": "__StsServerIdentityUrl__",
+    "StsUrl": "https://stsserveridentity20200311041815.azurewebsites.net",
     "ClientUrl": "__ClientUrl__"
   },
-  "UseLocalCertStore": "__UseLocalCertStore__",
-  "CertificateThumbprint": "__CertificateThumbprint__",
   "EmailSettings": {
     "SendGridApiKey": "__SendGridApiKey__",
     "SenderEmailAddress": "__SenderEmailAddress__"
   },
   "fido2": {
-    "serverDomain": "localhost",
-    "serverName": "StsTemplateDemo",
-    "origin": "https://localhost:44318",
+    "serverDomain": "stsserveridentity20200311041815.azurewebsites.net",
+    "serverName": "stsserveridentity20200311041815",
+    "origin": "https://stsserveridentity20200311041815.azurewebsites.net",
     "timestampDriftTolerance": 300000
   },
   "fido2mds": {
     "MDSAccessKey": null
+  },
+  "Vault": {
+    "Url": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "CertificateName": ""
   }
 }
