updating client configurations for demo

--- a/ApiServices/appsettings.Development.json
+++ b/ApiServices/appsettings.Development.json
@@ -6,5 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "StsServer": "https://localhost:44318"
+  //"StsServer": "https://localhost:44318"
 }
