updating certificate handling

--- a/StsServerIdentity/appsettings.json
+++ b/StsServerIdentity/appsettings.json
@@ -8,8 +8,9 @@
       }
     }
   },
-  "UseLocalCertStore": "true",
-  "CertificateThumbprint": "A6CB01E1D33F72ED8CA8883C1C7DE02A2C200B85",
+  "UseLocalCertStore": "false",
+  "CertificateThumbprint": "",
+  "CertificateNameKeyVault": "StsCert",
   "AzureKeyVaultEndpoint": "https://damienbod.vault.azure.net",
   "StsConfig": {
     "StsUrl": "https://stsserveridentity20200311041815.azurewebsites.net",
