updating app settings

--- a/StsServerIdentity/appsettings.Development.json
+++ b/StsServerIdentity/appsettings.Development.json
@@ -12,8 +12,9 @@
     "StsUrl": "https://localhost:44318",
     "ClientUrl": "https://localhost:44311"
   },
-  "UseLocalCertStore": "true",
-  "CertificateThumbprint": "A6CB01E1D33F72ED8CA8883C1C7DE02A2C200B85",
+  "UseLocalCertStore": "false",
+  "CertificateThumbprint": "",
+  "AzureKeyVaultEndpoint": "",
   "EmailSettings": {
     "SendGridApiKey": "TODO_EMAIL_API_KEY",
     "SenderEmailAddress": "TODO_EMAIL_ADDRESS"
