adding developer settings

--- a/StsServerIdentity/appsettings.Development.json
+++ b/StsServerIdentity/appsettings.Development.json
@@ -14,6 +14,7 @@
   },
   "UseLocalCertStore": "false",
   "CertificateThumbprint": "",
+  "CertificateNameKeyVault": "",
   "AzureKeyVaultEndpoint": "",
   "EmailSettings": {
     "SendGridApiKey": "TODO_EMAIL_API_KEY",
