--- a/ApiServices/appsettings.Development.json
+++ b/ApiServices/appsettings.Development.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  //"StsServer": "https://localhost:44318"
+  "StsServer": "https://localhost:44318",
+  "AzureKeyVaultEndpoint": ""
 }
