--- a/ApiServices/Properties/launchSettings.json
+++ b/ApiServices/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:53678",
+      "applicationUrl": "https://localhost:44364",
       "sslPort": 44364
     }
   },
